cmake_minimum_required(VERSION 3.14)
project(Chapter10)

set(CMAKE_CXX_STANDARD 14)

add_executable(Chapter10 main.cpp FirstOperationOverloading.cpp OverloadingOperation.cpp GFunctionOverloading.cpp Ex10_1.cpp OneOpndOverloading.cpp Ex10_2.cpp PostOpndOverloading.cpp PointMultipleOperation.cpp ConsoleOutput.cpp PointConsoleOutput.cpp Ex10_3.cpp)