cmake_minimum_required(VERSION 3.14)
project(Chapter4)

set(CMAKE_CXX_STANDARD 14)

add_executable(Chapter4 main.cpp RectangleFault.cpp Point.h Point.cpp Rectangle.h Rectangle.cpp RectangleFaultFind.cpp Ex04_1.cpp Encaps2.cpp Ex04_2.cpp Constructor1.cpp FruitSaleSim2.cpp RectangleConstructor.cpp ReferenceMember.cpp PrivateConstructor.cpp Destructor.cpp Ex04_3.cpp)