cmake_minimum_required(VERSION 3.14)
project(shChapter3)

set(CMAKE_CXX_STANDARD 14)

add_executable(shChapter3 main.cpp exc1.cpp exc1_2.cpp exc1_3.cpp exc2.cpp exc2_1.cpp exc3.cpp exc3_1.cpp exc3_2.cpp exc3_3.cpp exc4.cpp exc4_1.cpp exc4_2.cpp exc4_3.cpp exc5.cpp exc5_1.cpp exc6.cpp exc6_1.cpp HW3_1.cpp HW3_2.cpp HW3_3.cpp)