cmake_minimum_required(VERSION 3.14)
project(shChapter6)

set(CMAKE_CXX_STANDARD 14)

add_executable(shChapter6 main.cpp exm6.cpp exm1_1.cpp exm1.cpp exm2.cpp exm2_1.cpp exm3.cpp exm3_1.cpp exm4.cpp exm4_1.cpp exm5.cpp exm6_1.cpp exm7.cpp exm7_1.cpp exm8.cpp exm8_1.cpp exm9.cpp exm9_1.cpp exm10.cpp exm10_1.cpp exm11.cpp exm11_1.cpp exm11_3.cpp exm11_4.cpp exm11_5.cpp exm5_1.cpp)