cmake_minimum_required(VERSION 3.14)
project(shChapter7)

set(CMAKE_CXX_STANDARD 14)

add_executable(shChapter7 main.cpp exm7.cpp exm1.cpp exm1_1.cpp exm1_2.cpp exm2.cpp exm2_1.cpp exm2_2.cpp exm3.cpp exm3_1.cpp exm3_2.cpp exm4.cpp exm4_1.cpp exm5.cpp exm5_1.cpp exm6.cpp exm8.cpp exm8_1.cpp exm9.cpp exm9_1.cpp exm10.cpp exm10_1.cpp exm11.cpp exm11_1.cpp HW7_1.cpp HW7_2.cpp HW7_3.cpp)