cmake_minimum_required(VERSION 3.14)
project(shChapter8)

set(CMAKE_CXX_STANDARD 14)

add_executable(shChapter8 main.cpp exm1.cpp "exm1_(1).cpp" exm2.cpp "exm2_(1).cpp" exm3.cpp exm3_1.cpp exm4.cpp exm4_1.cpp exm5.cpp exm5_1.cpp exm6.cpp exm6_1.cpp exm7.cpp exm7_1.cpp exm8.cpp exm8_1.cpp exm9.cpp exm9_1.cpp exm10.cpp exm10_1.cpp exm11.cpp exm11_1.cpp exm12.cpp exm12_1.cpp exm13.cpp exm13_1.cpp exm14.cpp exm14_1.cpp exm15.cpp exm15_1.cpp exm16.cpp exm16_1.cpp exm17.cpp exm17_1.cpp exm19.cpp exm18.cpp exm18_1.cpp exm19_1.cpp exm20.cpp exm20_1.cpp HW8_1.cpp HW8_2.cpp)